[YES-138] Fixed css spacing between the zone posts and changed border style to be more visible

--- a/front-end/src/components/theZone/TheZonePost.css
+++ b/front-end/src/components/theZone/TheZonePost.css
@@ -4,35 +4,63 @@
   margin-bottom: -5px;
   padding-left: 5px;
 }
+
 .titleContainer {
-  margin-top:-20px;
-  overflow:hidden;
+  margin-top: -20px;
+  overflow: hidden;
 }
+
 .postTitle {
   width: calc(100% - 10px);
   margin: 2px;
   padding-left: 5px;
 }
+
 p {
   overflow-wrap: break-word;
   white-space: pre;
   padding-left: 5px;
 }
-.post {
-  border: 1px solid black;
-  margin: 5px;
+
+.postContainer {
+  border: 4px solid;
+  border-color: #6B6E70;
+  margin: 40px 5px 40px 5px;
+  border-radius: 15px;
+  background-color: #202327;
 }
 
-.postHeader {
-  border: 1px solid black;
-  height: 100px;
+.postHeaderContainer {
+  border: 1px inset;
+  border-color: #6B6E70;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom: none;
+  border-left:none;
+  border-right:none;
 }
 
-
-.comment {
-  border: 1px solid black;
+.postContent {
+  border: 1px solid;
+  border-color: #6B6E70;
+  border-right:none;
 }
+
+.commentsContainer {
+  margin: 25px 0px 0px 15px;
+  border: 3px solid;
+  border-color: #6B6E70;
+  border-top-left-radius: 10px;
+  border-right:none;
+  border-bottom:none;
+}
+
 .commentContainer {
-  border: 1px solid green;
-  min-height:110px;
+  border: 1px inset;
+  border-color: #6B6E70;
+  min-height: 110px;
+}
+
+button {
+  width: calc(100% - 10px);
 }
